# notes

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: .env  config.py  main.py
src/auth/: auth.py  manager.py
src/core/: database.py
src/core/settings/: database_settings.py
src/db/: database.py
src/endpoints/: endpoints.py  user_endpoints.py
src/migrations/: env.py
src/migrations/versions/: 0691c909e1b0_.py  075b7f6dbe98_.py  188471b81175_.py  24df1d78d57b_.py  56d34de08145_.py  b7887f845eae_.py  c51b053d5e48_.py
src/models/: models.py
src/schemas/: schemas.py
src/services/: crud.py  help_functions.py
