[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Вахитов Тимур <vt@greentechs.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
pre-commit = "^3.5.0"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
